Start placing the icons and pictures
I've decided to take put this assignment on the back burner for now.
TH epurpose of it is to practice grid. I've mostly gotten that done. I have other priorities
in terms of learning that I really need to focus on.

--- a/index.html
+++ b/index.html
@@ -15,19 +15,41 @@
             <header><h1>Digital Dash</h1></header>
             <div class="nav-column">
                 <ul>                 
-                    <li><a href="">Profile</a></li>
-                    <li><a href="">Messages</a></li>
-                    <li><a href="">History</a></li>
-                    <li><a href="">Tasks</a></li>
-                    <li><a href="">Communities</a></li>
+                    <li><a href=""><img src="./assets/icons/account-box.svg" alt="Account box representing profile.">
+                        <p>Profile</p>
+                    </a></li>
+                    <li><a href=""><img src="./assets/icons/message-badge-outline.svg" alt="Envelope icon representing messages.">
+                        <p>Messages</p>
+                    </a></li>
+                    <li><a href="">
+                        <img src="./assets/icons/noun-history-6026572.svg" alt="Clock representing history.">
+                        <p>History</p>
+                    </a></li>
+                    <li><a href="">
+                        <img src="./assets/icons/noun-task-2526129.svg" alt="Clipboard representing tasks">
+                        <p>Tasks</p>
+                    </a></li>
+                    <li><a href="">
+                        <img src="./assets/icons/communities_FILL0_wght400_GRAD0_opsz24.svg" alt="Circle with three dots representing communities">
+                        <p>Communities</p>
+                    </a></li>
                 </ul>
             </div>
             
             <div class="admin-column">
                 <ul>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                    <li><a href="">
+                        <img src="./assets/icons/settings_FILL0_wght400_GRAD0_opsz24.svg" alt="Gear icon representing settings">
+                        <p>Settings</p>
+                    </a></li>
+                    <li><a href=""><img src="./assets/icons/help_FILL0_wght400_GRAD0_opsz24.svg" alt="Supp">
+                        <p>Support</p>
+                    </a></li>
+                    <li>
+                        <a href="">
+                            <img src="./assets/icons/security_FILL0_wght400_GRAD0_opsz24.svg" alt="Shield representing privacy">
+                            <p>Privacy</p>
+                        </a></li>
                 </ul>
             </div>
         </div>
@@ -35,13 +57,13 @@
         <div class="header-container">
             <div class="nav-bar">
                 <div class="search-container">
-                    <label for="search">Search</label>
+                    <label for="search"><img src="./assets/icons/search_black_24dp.svg" alt="MAgnifying glass icon for search"></label>
                     <input type="search" id="search">
                 </div>
                 <div class="user-container">
                     <ul>
-                        <li><a href="">Bell</a></li>
-                        <li><a href="">Icon</a></li>
+                        <li><a href=""><img src="./assets/icons/bell-badge-outline.svg" alt=""></a></li>
+                        <li><a href=""><img src="./assets/icons/" alt=""></a></li>
                         <li><a href="">tem</a></li>
                     </ul>
                 </div>
@@ -65,19 +87,21 @@
             <div class="projects-container">
                 <h2>My Projects</h2>
                 <div class="card-container">
-                    <div class="card">Rock-Paper-Scissors</div>
+                    <div class="card">
+                        <div class="rps-card">
+                            <a href="https://toduyemi.github.io/rock-paper-scissors/"><img id="rps" src="./assets/images/rock-paper-scissors.png" alt="Screencapture of rock-paper-scissors webapp"></a>
+                        </div>
+
+                    </div>
                     <div class="card">Pixel Sketch</div>
                     <div class="card">Calculator</div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
                 </div>
             </div>
         
             <div class="bulletin-column">
                 <div class="bulletin-container">
                     <h2>Planned Projects</h2>
-                    <div class="bulletin-card">
+                    <div class="project-card">
                         <ul>
                             <li>Library</li>
                             <li>Weather App</li>
@@ -88,7 +112,7 @@
 
                 <div class="bulletin-container">
                     <h2>Training Path</h2>
-                    <div class="bulletin-card">
+                    <div class="tools-card">
                         <ul>
                             <li>React</li>
                             <li>Express</li>
